--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   gson: ^0.1.4
   fluttertoast: ^3.1.3
   intl: ">=0.14.0"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -74,6 +75,9 @@ flutter:
    - ic_banner_01.png
    - ic_banner_02.png
    - ic_contact.png
+   - assets/languages/en.json
+   - assets/languages/vi.json
+   - assets/languages/jp.json
   fonts:
     - family: googleSans
       fonts:
